# contour-extractor

./: CMakeLists.txt  main.cpp
